syntax = "proto3";

package reminder;

import "common.proto";

option go_package = "../proto";

service ReminderService {
    rpc ScheduleReminder(ScheduleReminderRequest) returns (ScheduleReminderResponse);
    rpc ListReminders(ListRemindersRequest) returns (ListRemindersResponse);
    rpc ListCustomerReminders(ListCustomerRemindersRequest) returns (ListRemindersResponse);
    rpc UpdateReminder(UpdateReminderRequest) returns (UpdateReminderResponse);
    rpc DeleteReminder(DeleteReminderRequest) returns (DeleteReminderResponse);
    rpc ToggleReminder(ToggleReminderRequest) returns (ToggleReminderResponse);
    rpc ListReminderLogs(ListReminderLogsRequest) returns (ListReminderLogsResponse);
}

message Reminder {
    string id = 1;
    string customer_id = 2;
    string order_id = 3;
    string product_id = 4;
    string reminder_date = 5;
    string last_sent_at = 6;
    bool enabled = 7;
    string created_at = 8;
}

message ReminderLog {
    string id = 1;
    string reminder_id = 2;
    string order_id = 3;
    string status = 4;
    string created_at = 5;
}

message ScheduleReminderRequest {
    string customer_id = 1;
    string order_id = 2;
    string product_id = 3;
    string reminder_date = 4;
}

message ScheduleReminderResponse {
    bool success = 1;
    string reminder_id = 2;
    common.Error error = 3;
}

message ListRemindersRequest {
    common.Filter filter = 1;
    string sort_by = 2;
    string sort_order = 3;
    int32 page = 4;
    int32 limit = 5;
}

message ListRemindersResponse {
    bool success = 1;
    repeated Reminder reminders = 2;
    int32 total = 3;
    int32 page = 4;
    int32 limit = 5;
    common.Error error = 6;
}

message ListCustomerRemindersRequest {
    string customer_id = 1;
    common.Filter filter = 2;
    string sort_by = 3;
    string sort_order = 4;
    int32 page = 5;
    int32 limit = 6;
}

message UpdateReminderRequest {
    string reminder_id = 1;
    string order_id = 2;
    string customer_id = 3;
    string reminder_date = 4;
}

message UpdateReminderResponse {
    bool success = 1;
    string message = 2;
    common.Error error = 3;
}

message DeleteReminderRequest {
    string reminder_id = 1;
    string customer_id = 2;
}

message DeleteReminderResponse {
    bool success = 1;
    string message = 2;
    common.Error error = 3;
}

message ToggleReminderRequest {
    string reminder_id = 1;
    string customer_id = 2;
}

message ToggleReminderResponse {
    bool success = 1;
    string message = 2;
    common.Error error = 3;
}

message ListReminderLogsRequest {
    string reminder_id = 1;
    string customer_id = 2;
    common.Filter filter = 3;
    string sort_by = 4;
    string sort_order = 5;
    int32 page = 6;
    int32 limit = 7;
}

message ListReminderLogsResponse {
    bool success = 1;
    repeated ReminderLog logs = 2;
    int32 total = 3;
    int32 page = 4;
    int32 limit = 5;
    common.Error error = 6;
}